<resources>
    <string name="app_name">Fortnite Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Consoles-->
    <string name="xbox">Xbox</string>
    <string name="ps4">PS4</string>
    <string name="pc">PC</string>


    <string name="search">Search</string>
    <string name="clear_history">Clear Search History</string>

    <string name="search_player_stats">Search Player Stats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">Matches</string>
    <string name="wins">Wins</string>
    <string name="kills">Kills</string>
    <string name="k_d">K/D</string>
    <string name="mode">Mode</string>
    <string name="enter_epic_username">Enter Epic Username</string>

    <string name="challenges">Challenges</string>
    <string name="account">Account</string>
    <string name="store">Store</string>
    <string name="history">History</string>
    <string name="stats">Stats</string>
    <string name="item_shop">Item Shop</string>
    <string name="xbox_gamertag">Xbox Gamertag</string>
    <string name="psn_gamertag">PSN Gamertag</string>
    <string name="epic_username">Epic Username</string>
    <string name="search_history">Search History</string>
    <string name="summary">Summary</string>
    <string name="lifetime">Lifetime</string>
    <string name="season_7">Season 7</string>

    <array name="platform_toggle">
        <item>@string/xbox_gamertag</item>
        <item>@string/psn_gamertag</item>
        <item>@string/epic_username</item>
    </array>
</resources>
